--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,7 @@ services:
     image: mysql:5.7.12
     volumes:
       - ./mysql:/var/lib/mysql
+    ports:
+    - "3306:3306"
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
