--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
+    "sqlite3": "^4.0.8",
     "typeorm": "^0.3.0-alpha.23"
   },
   "devDependencies": {
